# testdata_synthesization

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  results_forms.xlsx  results_protokoll.xlsx  results_report.xlsx  ruff.toml
prompt/: expected_output_generation.j2  query_evolution_hypothetical_scenario.j2  query_evolution_multi_context_template.j2  query_evolution_multi_step_reasoning.j2  query_formatting.j2  query_generation.j2
results/: first_stage_results.xlsx  fourth_stage_results.xlsx  results.xlsx  second_stage_results.xlsx  third_stage_results.xlsx
synthesizer/: config.py  generate_document_classification.py  llm_preprocessing.py  main.py  query_evolution.py  query_production.py
