[project]
name="synthesizer"
version="0.0.1"
dependencies=[
    "cohere==5.6.2",
    "python-dotenv==1.0.1",
    "langchain_community==0.2.11",
    "langchain_text_splitters==0.2.2",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "kneed==0.8.5",
    "jinja2==3.1.4",
    "random11==0.0.1",
    "loguru==0.7.2",
    "scikit-learn==1.5.1",
    "tiktoken", "pypdf", "kneed[plot]", "openpyxl"
]
[tool.setuptools]
packages=["synthesizer"]

